--- a/style.css
+++ b/style.css
@@ -180,6 +180,62 @@ body {
 .btn-primary:hover {
     background-color: #8987A1;
 }
+
+
+
+
+/*plants-lover section*/
+
+.challange-part {
+    max-width: 1140px;
+    margin: 0 auto;
+    padding-top: 200px;
+    display: flex;
+    gap: 50px;
+}
+
+.plants-lover {
+    display: flex;
+}
+.flower-shop {
+    width: 540px;
+    height: auto;
+}
+
+.circle-star {
+    margin-left: -150px;
+    margin-top: -100px;
+    width: 270px;
+    height: 270px;
+    animation: spin 4s linear infinite;
+    
+}
+@keyframes spin {
+    0% {
+        transform:rotate(0deg);
+    }
+    100% {
+        transform:rotate(360deg);
+    }
+}
+.plants-lover-column-text {
+    margin-left: -80px;
+}
+.lover-h1 {
+    font-size: 50px;
+}
+.column-paragraph {
+    font-family: 'Inter', sans-serif;
+    font-size: 19px;
+    width: 540px;
+    height: 100px;
+}
+.column-paragraph li {
+    margin-bottom: 20px;
+    width: 530px;
+    height: 90px;
+    color: #8987A1;
+}
 /*nav responsive start from here*/
 
 
